[gd_scene load_steps=2 format=3 uid="uid://bn1nx7qh0s4io"]

[ext_resource type="Script" uid="uid://7kucjg7jcmue" path="res://Game/UI/CharacterMenu/posing_menu.gd" id="1_c3i6e"]

[node name="PosingMenu" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_c3i6e")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Anim"

[node name="FullBodyAnimList" type="HFlowContainer" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Arm poses"

[node name="ArmAnimList" type="HFlowContainer" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StopAllButton" type="Button" parent="."]
layout_mode = 2
text = "Stop all"

[connection signal="pressed" from="StopAllButton" to="." method="_on_stop_all_button_pressed"]
